# python-interpreter

./: .gitignore  README.md  dune-project  example.py  python-interpreter.opam
lib/: ast.ml  dune  indent_buffer.ml  interpreter.ml  lexer.mll  parser.mly  program_state.ml
lib/eval/: eval_bin_op.ml  eval_ex.ml  eval_funcs.ml
lib/python_stdlib/: arith.ml  helper.ml  io.ml  load.ml  utilities.ml
lib/stdlib/: io.ml  load.ml
lib/utils/: hash_utils.ml
test/: dune  test_eval_bin_op.ml  test_eval_ex.ml  test_interpreter.ml  test_python_interpreter.ml
